@@ -2,6 +2,7 @@ Version 1.5.0
     * development version
     * added support for Proxy Auto-Config (PAC)
     * added option to open another private window from private window
+    * added option to detach tabs from window
     * added delete action in edit context menu on page
     * added possibility to remove EasyList from AdBlock
     * added inline domain completion to urlbar
